# riplay

./: .gitignore  README.md  meson.build
data/: resources.gresource.xml
data/ui/: default.blp  equalizer.blp  home.blp  player.blp  recents.blp  visuals_menu.blp
include/: file_history.h  gtk_utils.h  gui.h  metadata.h  redering.h  riplay.h  types.h
src/: albumart.cpp  gtk_utils.c  gui_actions.c  gui_equalizer.c  gui_equalizer.cpp  gui_home.c  gui_home.cpp  lyrics.cpp  main.cpp  memory.cpp  metadata.c  metadata.cpp  player.c  player.cpp  recents.cpp  redering.cpp  riplay.c  riplay.cpp  types.h  visuals_menu.c
src/graphics/: meson.build  standby.cpp  standby.h
src/logic/: file_history.cpp  file_history.h  meson.build
src/metadata/: albumart.cpp  lyrics.cpp  meson.build  metadata.cpp  metadata.h
src/models/: meson.build  models.h  song.cpp  state.cpp
src/utils/: builder.cpp  memory.cpp  meson.build  utils.h
src/views/: actions.cpp  actions.h  equalizer.cpp  equalizer.h  home.cpp  home.h  meson.build  player.cpp  player.h  recents.cpp  recents.h  visuals.cpp  visuals.h
